# virt-ic

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
examples/: cpu-test.rs  extend.rs  pins.rs  ram-test.rs  ram.rs  readme.rs  save.rs  segment-display.rs  sr-latch.rs  test-6502.rs
src/: board.rs  chip.rs  lib.rs  save.rs  socket.rs  trace.rs  utilities.rs
src/chip/: buttons.rs  clocks.rs  cpu.rs  gates.rs  generators.rs  inputs.rs  memories.rs  memory.rs  mod.rs  outputs.rs
src/chip/cpu/: nes6502.rs
src/chip/cpu/nes6502/: assembler.rs  opcodes.rs
src/chip/gates/: and.rs  nand.rs  nor.rs  or.rs
src/chip/outputs/: helpers.rs
