[package]
name = "virt-ic"
description = "virtual integrated circuits - an backend IC emulator"
version = "0.1.0"
authors = ["Vincent Foulon <sup.vfoulon@gmail.com>"]
repository = "https://github.com/VincentFoulon80/virt-ic"
keywords = ["emulator","integrated-circuit", "backend"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"