[package]
name = "virt-ic"
description = "virtual integrated circuits - an backend IC emulator"
version = "0.3.0"
authors = ["Vincent Foulon <sup.vfoulon@gmail.com>"]
readme = "README.md"
repository = "https://github.com/VincentFoulon80/virt-ic"
keywords = ["emulator","integrated-circuit", "backend"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.0"