[package]
authors = ["Vincent Foulon <sup.vfoulon@gmail.com>"]
description = "virtual integrated circuits - an backend IC emulator"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["emulator", "integrated-circuit", "backend"]
license = "MIT"
name = "virt-ic"
readme = "README.md"
repository = "https://github.com/VincentFoulon80/virt-ic"
version = "0.5.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.0"
rand = "0.8.5"
debug-ignore = "1.0.5"
ron = {version = "0.8.0", optional = true}
serde = {version = "1.0.152", features = ["derive"], optional = true}

[features]
default = ["serde"]
serde = ["dep:serde", "dep:ron", "bitflags/serde"]
